<resources>
    <string name="app_name">Vagas IFB</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="ainda_n_o_tem_conta">Ainda não tem conta?</string>
    <string name="texto_recuperar_senha">Informe seu e-mail que enviaremos \num link para alteração de senha</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="enviar_e_mail_senha">Enviar E-mail</string>
    <string name="requisitos">Requisitos</string>
    <string name="editar_vaga">Editar Vaga</string>
    <string name="excluir">Excluir</string>
    <string name="editar">Editar</string>
    <string name="cargo">Cargo</string>
    <string name="empresa">Empresa</string>
    <string name="descricao">Descrição</string>
    <string name="horario">Horário</string>
    <string name="salvar_vaga">Salvar Vaga</string>
    <string name="camera">Câmera</string>
    <string name="galeria">Galeria</string>
    <string name="cancelar">Cancelar</string>
    <string name="apagar_vaga">Apagar Vaga</string>
    <string name="lista_vaga_vazia">Nenhuma vaga cadastrada</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="curriculo">Currículo</string>
    <string name="vagas">Vagas</string>
    <string name="pesquisar_vaga">Pesquisar Vaga</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="sobre">Sobre</string>
    <string name="semestre">Semestre</string>
    <string name="experiencias">Experiências</string>
    <string name="qualificacoes">Qualificações</string>
    <string name="cv_not_found">Você ainda não cadastrou seu CV</string>
    <string name="cadastrar_curriculo">Cadastrar Curriculo</string>
    <string name="fazer_o_login">Fazer o login</string>
    <string name="dejesa_apagar_a_vaga">Você tem certeza que dejesa apagar a vaga?</string>
    <string name="nao_logado">Você não está logado na sua conta, faça o login para poder acessar o app</string>
    <string name="enviar_cv">Enviar Currículo</string>
    <string name="participar_vaga">Você deseja enviar seu currículo para participar da vaga?</string>
    <string name="sem_vaga_inscrita">Você não se inscreveu em nenhuma vaga</string>
    <string name="nenhum_cv">Nenhum Currículo enviado ainda</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="sem_prof">Você ainda não cadastrou professores</string>
</resources>