<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical">

    <android.widget.Button
        android:id="@+id/btnCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_camera"
        android:drawablePadding="16dp"
        android:drawableTint="@color/primary_text_color"
        android:paddingStart="16dp"
        android:paddingEnd="40dp"
        android:text="@string/camera"
        android:textAlignment="textStart"
        android:textColor="@color/black" />

    <android.widget.Button
        android:id="@+id/btnGaleria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_galeria"
        android:drawablePadding="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="40dp"
        android:text="@string/galeria"
        android:textAlignment="textStart"
        android:textColor="@color/black" />

    <android.widget.Button
        android:id="@+id/btnCancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_close"
        android:drawablePadding="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="40dp"
        android:text="@string/cancelar"
        android:textAlignment="textStart"
        android:textColor="@color/black" />

</LinearLayout>