<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_icon"
    tools:context=".ui.activity.empregador.FormVagaActivity">

    <include
        android:id="@+id/toolbarVoltar"
        layout="@layout/toolbar_voltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarVoltar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/btnAddImg"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/text_icon"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp">

                <ImageView
                    android:id="@+id/imgAdd"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_add_foto_empresa"
                    app:tint="@color/secondary_text" />

                <ImageView
                    android:id="@+id/imgVagaImg"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/cargo"
                android:textColorHint="@color/dark_primary_color"
                app:boxBackgroundColor="@color/light_primary_color"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/dark_primary_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtCargo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cargo"
                    android:inputType="text"
                    android:textColor="@color/primary_text_color"
                    android:textColorHint="@color/dark_primary_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/empresa"
                android:textColorHint="@color/dark_primary_color"
                app:boxBackgroundColor="@color/light_primary_color"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/dark_primary_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmpresa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/empresa"
                    android:inputType="text"
                    android:textColor="@color/primary_text_color"
                    android:textColorHint="@color/dark_primary_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/descricao"
                android:textColorHint="@color/dark_primary_color"
                app:boxBackgroundColor="@color/light_primary_color"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/dark_primary_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtDescricao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/descricao"
                    android:inputType="text"
                    android:textColor="@color/primary_text_color"
                    android:textColorHint="@color/dark_primary_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/horario"
                android:textColorHint="@color/dark_primary_color"
                app:boxBackgroundColor="@color/light_primary_color"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/dark_primary_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtHorario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/horario"
                    android:inputType="text"
                    android:textColor="@color/primary_text_color"
                    android:textColorHint="@color/dark_primary_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/requisitos"
                android:textColorHint="@color/dark_primary_color"
                app:boxBackgroundColor="@color/light_primary_color"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"

                app:boxStrokeColor="@color/dark_primary_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtRequisitos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/requisitos"
                    android:inputType="text"
                    android:paddingBottom="48dp"

                    android:textColor="@color/primary_text_color"
                    android:textColorHint="@color/dark_primary_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <android.widget.Button
                android:id="@+id/btnSalvar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/bg_btn"
                android:clickable="true"
                android:focusable="true"
                android:padding="1dp"
                android:text="@string/salvar_vaga"
                android:textAllCaps="false"
                android:textColor="@color/text_icon"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:indeterminateTint="@color/accent_color"
                android:visibility="gone"
                tools:visibility="visible" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>